[tool.poetry]
name = "asyncupbit"
version = "0.1.0"
description = "비동기 기반의 파이썬 업비트 API 클라이언트"
authors = ["sjquant <seonujang92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pyright = "^1.1.363"

[tool.ruff]
line-length = 100
fix = true
exclude = [
    '*.pyi',
    "site-packages",
    ".mypy_cache",
    ".ruff_cache",
]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pyright]
include = ["aioupbit"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.10"
typeCheckingMode = "strict"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
